chage wording on some labels

--- a/jobtracker/jobapps/templates/jobapps/jobapp_page.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_page.html
@@ -8,7 +8,7 @@ Job Lizard - {{ jobapp.company }}
 <div class="container-sm">
     <div class="row mb-1 text-align-start">
         <div class="col">
-            <a href="{% url 'edit-job' jobapp.id %}" class="btn btn-success m-3" type="submit">Edit Job</a>
+            <a href="{% url 'edit-job' jobapp.id %}" class="btn btn-success m-3" type="submit">Edit Application</a>
         </div>
     </div>
     <div class="row mb-1 text-align-start">
