--- a/jobtracker/templates/home.html
+++ b/jobtracker/templates/home.html
@@ -9,7 +9,7 @@ Job Lizard - Main
     <div class="row">
         <div class="col-4">
             <p class="h4 bg-success text-light">Job Statistics</p>
-            <p><b>Total jobs applied for in the last 30 days:</b> {{ jobcount }}</p>
+            <p><b>Total job applications in the last 30 days:</b> {{ jobcount }}</p>
         </div>
     </div>
 </div>
