--- a/jobtracker/jobapps/templates/jobapps/jobapp_list.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_list.html
@@ -9,7 +9,7 @@ Job Lizard - Job App List
 <div class="container m-2">
     <div class="row p-1">
         <div class="jobapp col-3 text-start">
-            <h2 class="display-6 text-secondary ms-2"><b>Jobs Applied for</b></h2>
+            <h2 class="display-6 text-secondary ms-2"><b>Job Applications</b></h2>
         </div>
         <div class="jobapp col text-start">
             <form class="d-flex" method=POST action="{% url 'search' %}">
@@ -40,7 +40,7 @@ Job Lizard - Job App List
                     <p class="h4 h4 text-dark">Company</p>
                 </td>
                 <td class="jobapp text-start">
-                    <p class="h4 h4 text-dark">City / State</p>
+                    <p class="h4 h4 text-dark">Location</p>
                 </td>
                 <td class="jobapp text-start">
                     <p class="h4 h4 text-dark">Source</p>
