--- a/jobtracker/contractors/templates/contractors/contractor_list.html
+++ b/jobtracker/contractors/templates/contractors/contractor_list.html
@@ -8,10 +8,10 @@ Job Lizard - Contractor List
 
 <div class="container m-2">
     <div class="row p-1">
-        <div class="jobapp col-3 text-start">
+        <div class="jobapp col-2 text-start">
             <h2 class="display-6 text-secondary ms-2"><b>Contractors</b></h2>
         </div>
-        <div class="col text-start">
+        <div class="col text-start ms-3">
             <form class="d-flex" method=POST action="{% url 'contractors:new_contractor' %}">
                 {% csrf_token %}
                     <button class="btn btn-success" type="submit">
