--- a/jobtracker/contractors/templates/contractors/contractor_page.html
+++ b/jobtracker/contractors/templates/contractors/contractor_page.html
@@ -8,7 +8,7 @@ Job Lizard - {{ contractor.name }}
 <div class="container-sm">
     <div class="row mb-1 text-align-start">
         <div class="col">
-            <a href="{% url 'contractors:edit_contractor' contractor.id %}" class="btn btn-success m-3" type="submit">Edit Application</a>
+            <a href="{% url 'contractors:edit_contractor' contractor.id %}" class="btn btn-success m-3" type="submit">Edit Contractor</a>
         </div>
     </div>
     <div class="row mb-1 text-align-start">
