--- a/jobtracker/jobapps/templates/jobapps/jobapp_list.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_list.html
@@ -27,26 +27,26 @@ Job Lizard - Job App List
     <div class="container p-2">
         <table class="table table-light table-striped">
             <tr>
-                <td class="jobapp text-start">
+                <td class="jobapp text-start border border-secondary-subtle">
                     <p class="h4 h4 text-dark">Date</p>
                 </td>
-                <td class="jobapp text-start">
+                <td class="jobapp text-start border border-secondary-subtle">
                     <p class="h4 h4 text-dark">Status</p>
                 </td>
-                <td class="jobapp text-start">
+                <td class="jobapp text-start border border-secondary-subtle">
                     <p class="h4 h4 text-dark">Job Title</p>
                 </td>
-                <td class="jobapp text-start">
+                <td class="jobapp text-start border border-secondary-subtle">
                     <p class="h4 h4 text-dark">Company</p>
                 </td>
-                <td class="jobapp text-start">
+                <td class="jobapp text-start border border-secondary-subtle">
                     <p class="h4 h4 text-dark">Location</p>
                 </td>
-                <td class="jobapp text-start">
+                <td class="jobapp text-start border border-secondary-subtle">
                     <p class="h4 h4 text-dark">Source</p>
                 </td>
-                <td class="jobapp text-start">
-                    <p class="h4 h4 text-dark">Job Number</p>
+                <td class="jobapp text-start border border-secondary-subtle">
+                    <p class="h4 h4 text-dark">Job No.</p>
                 </td>
             </tr>
             {% for jobapp in jobapps %}
